# py-xppt-jtd-codegen

./: .gitignore  README.md  pyproject.toml
xppt_jtd_codegen/: __init__.py  __main__.py
